--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "displayName": "beauty_prints",
   "description": "Make print lines easier and faster",
   "version": "0.0.1",
+  "repository": {
+    "url": "https://github.com/fedeegmz/beauty-prints"
+  },
   "engines": {
     "vscode": "^1.95.0"
   },
